examples/neg/high_loop_grow/alice.oio
ALICE

network channel BOB/B1@{H} : int@{H};
network channel BOB/B2@{H} : int@{H};
local channel STDOUT: int@{H};

A1@{H} (secret : int@{H}) {
    send(BOB/B1, secret+1);
    send(BOB/B2, secret+1);
}

A2@{H} (secret : int@{H}) {
    output(STDOUT, secret);
    send(BOB/B2, secret+1);
}
